--- a/pom.xml
+++ b/pom.xml
@@ -9,20 +9,20 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-        <spring.version>5.0.4.RELEASE</spring.version>
+        <spring.version>5.2.12.RELEASE</spring.version>
         <javax.servlet.version>4.0.0</javax.servlet.version>
         <jstl.version>1.2</jstl.version>
-        <mybatis.version>3.4.6</mybatis.version>
-        <mysql.connector.java.version>8.0.9-rc</mysql.connector.java.version>
-        <druid.version>1.1.9</druid.version>
-        <mybatis.spring.version>1.3.2</mybatis.spring.version>
+        <mybatis.version>3.5.6</mybatis.version>
+        <mysql.connector.java.version>5.1.49</mysql.connector.java.version>
+        <druid.version>1.1.24</druid.version>
+        <mybatis.spring.version>2.0.6</mybatis.spring.version>
+        <mybatis-plus.version>3.4.2</mybatis-plus.version>
 
-        <slf4j.version>1.7.25</slf4j.version>
+        <slf4j.version>1.7.30</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
 
-        <spring.redis.version>1.6.0.RELEASE</spring.redis.version>
-        <jedis.version>2.7.2</jedis.version>
-        <commons.version>2.4.2</commons.version>
+        <jedis.version>3.5.1</jedis.version>
+        <spring.redis.version>2.3.6.RELEASE</spring.redis.version>
     </properties>
 
 
@@ -138,7 +138,14 @@
             <artifactId>mybatis-spring</artifactId>
             <version>${mybatis.spring.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus</artifactId>
+            <version>${mybatis-plus.version}</version>
+        </dependency>
         <!--mybatis end -->
+
 
         <!-- junit -->
         <dependency>
@@ -202,7 +209,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
-            <version>${commons.version}</version>
+            <version>2.9.0</version>
         </dependency>
 
         <dependency>
